Keyboard > View and Customize Shortcuts: "Reset all shortcuts to their default keybindings" tooltip doesn't follow HIG guidelines
Affected version
gnome-control-center-45.0-1.fc39.x86_64
Description
When going to Keyboard > View and Customize Shortcuts, the Reset All button shows a tooltip, which is "Reset all shortcuts to their default keybindings". However, HIG advises to use short tooltips and to use header capitalization.
I wonder if this tooltip is actually necessary, since the button already has a label and shows a confirmation dialog:
Edited by Automeris naranja