keyboard-shortcut-dialog: Tweak reset shortcuts confirmation dialog

Properly explain what resetting shortcuts actually does.
String reference:
https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2669#note_1921867

Partially fixes https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2669